packages/cpp-debug/src/browser/style/index.css
/* ... */
.t-mv-view .eight-bits {
    border-bottom: 1px solid transparent;
    box-sizing: border-box;
}

.t-mv-view .eight-bits:not(.changed):not(.highlight):hover {
    background-color: var(--theia-editor-inactiveSelectionBackground);
}

.t-mv-memory-container:focus .eight-bits.highlight {
    background-color: var(--theia-editor-selectionBackground);
    border-radius: 1px;
    border-bottom: solid 1px var(--theia-editorCursor-foreground);
}

.t-mv-memory-container:focus .eight-bits.changed.highlight {
    background-color: var(--theia-editorLightBulbAutoFix-foreground-light);
}

.t-mv-memory-container:not(:focus) .eight-bits.highlight {
    background-color: var(--theia-editor-inactiveSelectionBackground);
}

.t-mv-view .eight-bits.modified {
    outline-width: 1px;
    outline-style: solid;
    outline-offset: -1px;
    outline-color: var(--theia-editorWarning-foreground);
    border: none;
}

.t-mv-view .byte-group:not(:first-of-type) {
    display: inline-block;
    padding-left: var(--theia-ui-padding);
}

.t-mv-view .data-address-col {
    width: unset;
}

.t-mv-view-container {
    flex: 1;
    overflow: hidden;
    margin-top: var(--theia-ui-padding);
    height: 100%;
}

.t-mv-view-container thead {
    position: absolute;
}

.t-mv-view-container .ps__rail-y {
    left: unset !important;
}

.t-mv-view-container:focus {
    /* Fixes a padding issue when clicking inside the container */
    border: none;
}

.memory-diff-select .theia-select:focus,
.t-mv-container .theia-select:focus {
    outline-width: 1px;
    outline-style: solid;
    outline-offset: -1px;
    opacity: 1 !important;
    outline-color: var(--theia-focusBorder);
}

.t-mv-settings-container {
    flex: none;
    padding-bottom: var(--theia-ui-padding);
}

.t-mv-settings-container .t-mv-settings-group-header {
    padding-bottom: calc(var(--theia-ui-padding)/2);
    border-bottom: 1px solid hsla(0, 0%, 50%, 0.5);
}

.memory-widget-toolbar {
    display: flex;
    flex-flow: row nowrap;
    height: 24px;
    align-items: center;
    max-width: 100%;
}

.memory-widget-toolbar * {
    flex: none;
}

.memory-widget-toolbar .memory-widget-header-click-zone {
    min-width: 0;
}

.memory-widget-header-click-zone * {
    flex: none;
}

.memory-widget-auto-updates-container {
    width: 16px;
    margin-right: var(--theia-ui-padding);
    font-size: 1.3em;
}


.toggle-settings-container {
    margin-left: auto;
}

.toggle-settings-container .toggle-settings-click-zone {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    margin-left: var(--theia-ui-padding);
    user-select: none;
    box-sizing: content-box;
    border-top: 1px solid transparent;
}

.toggle-settings-container .toggle-settings-click-zone:focus {
    outline: none;
    border-top: 1px solid var(--theia-focusBorder);
}

.toggle-settings-container .toggle-settings-click-zone span {
    white-space: nowrap;
}

.toggle-settings-container .codicon-settings-gear {
    font-size: 1.1em;
    margin-right: var(--theia-ui-padding);
}

.toggle-settings-container+div>.t-mv-settings-group-header:first-of-type,
.toggle-settings-container+.t-mv-settings-group-header {
    margin-top: 0;
}


.t-mv-wrapper button.theia-button {
    min-width: 30px;
    margin: unset;
    padding: unset;
}

.view-group {
    grid-template-columns: 70px 1fr;
}

.settings-group {
    grid-template-columns: 110px 1fr;
    margin-top: calc(2 * var(--theia-ui-padding));
}

.ascii-group {
    grid-template-columns: 70px 1fr;
}

.t-mv-group.view-group {
    grid-template-columns: 3fr repeat(2, 1fr) 30px;
    grid-template-rows: repeat(2, 24px);
    grid-auto-flow: column;
    border-bottom: 1px solid hsla(0, 0%, 50%, 0.5);
    border-top: 1px solid hsla(0, 0%, 50%, 0.5);
    padding-bottom: var(--theia-ui-padding);
}

.view-group-go-button {
    grid-row: 2 / 3;
    height: 100%;
}

.t-mv-group {
    display: grid;
    grid-column-gap: var(--theia-ui-padding);
    grid-row-gap: calc(var(--theia-ui-padding)/2);
    align-items: center;
}

.t-mv-group .theia-select,
.t-mv-group .theia-input {
    width: 100%;
    box-sizing: border-box;
}

.t-mv-group .multi-select-bar {
    min-height: 19px;
}

.t-mv-group .multi-select-label {
    line-height: 17px;
}

.t-mv-input-group.button-wrapper {
    margin: 2px;
    width: 100%;
    display: block;
    text-align: center;
}

.t-mv-input-group.button-wrapper .theia-button.main {
    margin: var(--theia-ui-padding) 0 0 0;
}

table.t-mv-view {
    align-self: center;
    border-collapse: collapse;
    border: none;
}

table.t-mv-view {
    font-size: var(--theia-ui-font-size1);
    font-weight: 400;
    text-align: left;
    padding: 10px;
}

table.t-mv-view td,
table.t-mv-view th {
    font-family: monospace;
    padding-right: 15px;
}

table.t-mv-view .t-mv-view-row.t-mv-view-row-highlight {
    border-bottom: 1px var(--theia-editorGroup-border) solid;
}

table.t-mv-view .t-mv-view-row:hover {
    background-color: var(--theia-sideBar-background);
}

table.t-mv-view .t-mv-view-address {
    font-weight: 700;
    text-align: left;
}

.t-mv-settings-group-header.small-margin {
    margin-bottom: var(--theia-ui-padding);
    margin-top: var(--theia-ui-padding);
}

.t-mv-variable-label:not(:last-of-type)::after {
    content: ',';
    margin-right: var(--theia-ui-padding);
    color: var(--theia-editor-foreground);
}

.mw-input-select {
    position: relative;
    height: 100%;
}

.mw-input-select .theia-input {
    position: absolute;
    z-index: 1;
    width: calc(100% - 18px);
}

.mw-input-select .theia-input:focus {
    outline: unset;
}

.mw-input-select .theia-select {
    position: absolute;
    z-index: 0;
    height: calc(var(--theia-content-line-height) + 2px);
}

.mw-input-select .theia-select:focus {
    outline: unset;
}

.memory-layout-widget {
    display: flex;
    flex-direction: column;
}

.memory-dock-panel {
    flex-grow: 1;
    margin: var(--theia-ui-padding);
    margin-top: 0;
}
/* ... */

